Add note display and user color choice

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <section class="new-note">
         <div class="new-note-input">
-          <text-area placeholder="// Write a note here"></text-area>
+          <textarea rows="6" cols="60" placeholder="// Write a note here"></textarea>
         </div>
         <div class="new-note-btns">
           <input type="color" id="note-color" name="note-color" value="#e66465">
